[package]
name = "gaborator-sys"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"
description = "Rust API for Gaborator audio processing library"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
anyhow = "1.0.38"
hound = "3.4.0"
num-complex = "0.3.1"

